--- a/.env.example
+++ b/.env.example
@@ -37,3 +37,6 @@ PUSHER_APP_CLUSTER=mt1
 
 MIX_PUSHER_APP_KEY="${PUSHER_APP_KEY}"
 MIX_PUSHER_APP_CLUSTER="${PUSHER_APP_CLUSTER}"
+
+MAP_CENTER_LATITUDE=
+MAP_CENTER_LONGITUDE=
